Add NtfyConnectionStub for testing and enhance NtfyConnectionSpy with file sending support